--- a/views/paper.erb
+++ b/views/paper.erb
@@ -9,9 +9,8 @@
   <body>
     <h2>
     We played paper!
-  </h2>
-
-    <a href="/">
-    Rules
-  </a>
+    </h2>
+    <h2><%= @played %></h2>
+    <h2><%= @outcome %></h2>
+    <a href="/">Rules</a>
   </body>
