--- a/views/rock.erb
+++ b/views/rock.erb
@@ -7,11 +7,8 @@
   </head>
 
   <body>
-    <h2>
-    We played rock!
-  </h2>
-
-    <a href="/">
-    Rules
-  </a>
+    <h2> We played rock!</h2>
+    <h2><%= @played %></h2>
+    <h2><%= @outcome %></h2>
+    <a href="/">Rules</a>
   </body>
