--- a/views/scissors.erb
+++ b/views/scissors.erb
@@ -10,7 +10,8 @@
     <h2>
     We played scissors!
   </h2>
-
+  <h2><%= @played %></h2>
+  <h2><%= @outcome %></h2>
     <a href="/">
     Rules
   </a>
